update WebSecure and devops files