@@ -1,5 +1,6 @@
 package org.example.infrastructure.web.secure;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -10,6 +11,7 @@ import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
@@ -36,23 +38,25 @@ public class WebSecure {
     }
 
     private Converter<Jwt, Mono<AbstractAuthenticationToken>> grantedAuthoritiesExtractor() {
-        return new ReactiveJwtAuthenticationConverterAdapter(new JwtAuthenticationConverter() {{
-        setJwtGrantedAuthoritiesConverter(jwt -> {
-            Object realmAccess = jwt.getClaim("realm_access");
-            List<String> roles = Collections.emptyList();
-            if (realmAccess instanceof java.util.Map<?,?> map) {
-                Object rolesObj = map.get("roles");
-                if (rolesObj instanceof List<?> list) {
-                    roles = list.stream()
+        JwtAuthenticationConverter convertor = new JwtAuthenticationConverter();
+        convertor.setJwtGrantedAuthoritiesConverter(this::myJwtGrantedAuthoritiesConverter);
+        return new ReactiveJwtAuthenticationConverterAdapter(convertor);
+    }
+
+    private Collection<GrantedAuthority> myJwtGrantedAuthoritiesConverter(Jwt jwt) {
+        Object realmAccess = jwt.getClaim("realm_access");
+        List<String> roles = Collections.emptyList();
+        if (realmAccess instanceof java.util.Map<?, ?> map) {
+            Object rolesObj = map.get("roles");
+            if (rolesObj instanceof List<?> list) {
+                roles = list.stream()
                         .filter(String.class::isInstance)
                         .map(String.class::cast)
-                        .collect(Collectors.toList());
-                }
+                        .toList();
             }
-            return roles.stream()
+        }
+        return roles.stream()
                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
                 .collect(Collectors.toList());
-            });
-        }});
     }
 }
